Travis CI: Test with FIND_LEAK

--- a/.travis.yml
+++ b/.travis.yml
@@ -155,6 +155,11 @@ matrix:
   - os: linux
     compiler: gcc
     env:
+    - CFLAGS_EXTRA="-D FIND_LEAK -D SKIP_LEAKED_OBJECTS_PRINTING"
+    - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus"
+  - os: linux
+    compiler: gcc
+    env:
     - CFLAGS_EXTRA="-D SMALL_CONFIG -D NO_GETENV"
     - CONF_OPTIONS="--enable-cplusplus"
   - os: linux
