--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,16 @@ matrix:
     env:
     - MAKEFILE_TARGETS="dist"
   - os: linux
+    env:
+    - CPPCHECK_ENABLE="--enable=unusedFunction -D GC_BUILTIN_ATOMIC *.c *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c"
+    - NO_CLONE_LIBATOMIC_OPS=true
+  - os: linux
+    env:
+    - CPPCHECK_ENABLE="-j4 --enable=information,performance,portability,style,warning *.c"
+  - os: linux
+    env:
+    - CPPCHECK_ENABLE="-j4 --enable=information,performance,portability,style,warning *.cc cord/*.c cord/tests/*.c extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c extra/real_malloc.c extra/symbian.cpp tests/*.c tests/*.cc tools/*.c"
+  - os: linux
     compiler: gcc
     env:
     - CONF_OPTIONS="--enable-gc-assertions --enable-cplusplus --enable-static"
@@ -282,12 +292,6 @@ matrix:
     env:
     - CSA_CHECK=true
     - CFLAGS_EXTRA="-D ALL_INTERIOR_POINTERS -D CHECKSUMS -D DBG_HDRS_ALL -D DEBUG_THREADS -D ENABLE_TRACE -D GC_ALWAYS_MULTITHREADED -D GC_ASSERTIONS -D GC_ATOMIC_UNCOLLECTABLE -D GC_ENABLE_SUSPEND_THREAD -D GC_GCJ_SUPPORT -D GC_PRINT_BACK_HEIGHT -D GC_THREADS -D HANDLE_FORK -D JAVA_FINALIZATION -D KEEP_BACK_PTRS -D MAKE_BACK_GRAPH -D PARALLEL_MARK -D PRINT_BLACK_LIST -D THREAD_LOCAL_ALLOC -D USE_MMAP -D USE_MUNMAP"
-  - os: linux
-    env:
-    - CPPCHECK_ENABLE="-j16 --enable=information,performance,portability,style,warning extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c extra/real_malloc.c extra/symbian.cpp"
-  - os: linux
-    env:
-    - CPPCHECK_ENABLE="--enable=unusedFunction"
   - os: linux
     compiler: clang
     env:
@@ -617,10 +621,9 @@ script:
         tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
-    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -D CPPCHECK
-        -I include -I libatomic_ops/src $CPPCHECK_ENABLE
-        *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c
-        extra/gc.c;
+    set -o pipefail; ~/cppcheck/cppcheck --force --error-exitcode=2
+        -U GC_API -U GC_PRIVATE_H -D CPPCHECK -I include -I libatomic_ops/src
+        $CPPCHECK_ENABLE | grep --line-buffered "c ";
   fi
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1"
