--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,12 @@ matrix:
     - MAKEFILE_TARGETS="dist"
   - os: linux
     env:
-    - CPPCHECK_ENABLE="--enable=unusedFunction -D GC_BUILTIN_ATOMIC"
+    - CPPCHECK_ENABLE="--enable=unusedFunction -D GC_BUILTIN_ATOMIC extra/gc.c"
+    - CPPCHECK_OUT_FILTER="Z"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
     env:
-    - CPPCHECK_ENABLE="-j4 --enable=information,performance,portability,style,warning extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c extra/real_malloc.c extra/symbian.cpp"
+    - CPPCHECK_ENABLE="-j4 --enable=information,performance,portability,style,warning -I libatomic_ops/src extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c extra/real_malloc.c extra/symbian.cpp *.c tools/*.c"
   - os: linux
     compiler: gcc
     env:
@@ -605,10 +606,11 @@ script:
         tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
+    if [[ "$CPPCHECK_OUT_FILTER" == "" ]]; then CPPCHECK_OUT_FILTER="c "; fi;
     set -o pipefail; ~/cppcheck/cppcheck --force --error-exitcode=2
-        -U GC_API -D CPPCHECK -I include -I libatomic_ops/src
-        $CPPCHECK_ENABLE *.c *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc
-        tools/*.c | grep --line-buffered "c ";
+        -U GC_API -D CPPCHECK -I include $CPPCHECK_ENABLE
+        *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc |
+        grep --line-buffered "$CPPCHECK_OUT_FILTER";
   fi
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1"
