Travis CI: Do not run cppcheck twice for cord, tests, tools source files

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,15 @@ matrix:
     env:
     - MAKEFILE_TARGETS="dist"
   - os: linux
+    env:
+    - CPPCHECK_ENABLE="-j4 --enable=information,performance,portability,style,warning -D __SIZEOF_POINTER__=8 -U CLOCKS_PER_SEC -U FIXUP_POINTER -U GC_EXTERN -U STACKBOTTOM *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c real_malloc.c extra/symbian.cpp"
+  - os: linux
+    env:
+    - CPPCHECK_ENABLE="--enable=performance,portability,style,warning extra/gc.c"
+  - os: linux
+    env:
+    - CPPCHECK_ENABLE="--enable=unusedFunction extra/gc.c *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c"
+  - os: linux
     addons:
       apt:
         packages:
@@ -242,15 +251,6 @@ matrix:
     env:
     - CSA_CHECK=true
     - CFLAGS_EXTRA="-D ALL_INTERIOR_POINTERS -D CHECKSUMS -D DBG_HDRS_ALL -D DEBUG_THREADS -D ENABLE_TRACE -D GC_ALWAYS_MULTITHREADED -D GC_ASSERTIONS -D GC_ATOMIC_UNCOLLECTABLE -D GC_ENABLE_SUSPEND_THREAD -D GC_GCJ_SUPPORT -D GC_PRINT_BACK_HEIGHT -D GC_THREADS -D HANDLE_FORK -D JAVA_FINALIZATION -D KEEP_BACK_PTRS -D MAKE_BACK_GRAPH -D PARALLEL_MARK -D PRINT_BLACK_LIST -D THREAD_LOCAL_ALLOC -D USE_MMAP -D USE_MUNMAP"
-  - os: linux
-    env:
-    - CPPCHECK_ENABLE="-j16 --enable=information,performance,portability,style,warning -D __SIZEOF_POINTER__=8 -U CLOCKS_PER_SEC -U FIXUP_POINTER -U GC_EXTERN -U STACKBOTTOM extra/AmigaOS.c extra/MacOS.c extra/msvc_dbg.c real_malloc.c extra/symbian.cpp"
-  - os: linux
-    env:
-    - CPPCHECK_ENABLE="--enable=performance,portability,style,warning extra/gc.c"
-  - os: linux
-    env:
-    - CPPCHECK_ENABLE="--enable=unusedFunction extra/gc.c"
   - os: linux
     compiler: clang
     env:
@@ -487,9 +487,8 @@ script:
         extra/msvc_dbg.c tests/*.c tests/*.cc tools/*.c;
   fi
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
-    ~/cppcheck/cppcheck -q -f --error-exitcode=2 -U GC_API -D CPPCHECK
-        -I include -I libatomic_ops/src $CPPCHECK_ENABLE
-        *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc tools/*.c;
+    ~/cppcheck/cppcheck --quiet --force --error-exitcode=2 -U GC_API
+        -D CPPCHECK -I include -I libatomic_ops/src $CPPCHECK_ENABLE;
   fi
 - if [[ "$TESTS_CUSTOM_RUN" == true ]]; then
     ASAN_OPTIONS="detect_leaks=1" UBSAN_OPTIONS="halt_on_error=1" make check;
