Define GC_ATOMIC_UNCOLLECTABLE and JAVA_FINALIZATION in all make scripts
This matches the policy of configure and CMakeLists.txt.

* BCC_MAKEFILE (defines): Add -D GC_ATOMIC_UNCOLLECTABLE.
* NT_MAKEFILE (.cpp.obj): Likewise.
* Makefile.direct (CFLAGS): Add -D JAVA_FINALIZATION; reorder options.
* NT_MAKEFILE (.c.obj): Add -D GC_ATOMIC_UNCOLLECTABLE
-D JAVA_FINALIZATION.
* OS2_MAKEFILE (CFLAGS): Likewise.
* WCC_MAKEFILE (DEFS): Likewise.
* build/s60v3/libgc.mmp: Likewise.
* digimars.mak (DEFINES): Likewise.
* gc.mak [$CFG=="gc - Win32 Release" || $CFG=="gc - Win32 Debug"]
(CPP_PROJ): Likewise.
* NT_MAKEFILE (.cpp.obj): Remove redundant -I $(AO_INCLUDE_DIR)
-D ALL_INTERIOR_POINTERS.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -46,8 +46,8 @@ AO_SRC_DIR=$(srcdir)/libatomic_ops
 CFLAGS_EXTRA=
 # We need CFLAGS_FOR_PIC because we might be building a shared library.
 CFLAGS= -O -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
-  -DGC_ATOMIC_UNCOLLECTABLE -DNO_EXECUTE_PERMISSION -DALL_INTERIOR_POINTERS \
-  -DENABLE_DISCLAIM $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
+  -DALL_INTERIOR_POINTERS -DENABLE_DISCLAIM -DGC_ATOMIC_UNCOLLECTABLE \
+  -DJAVA_FINALIZATION -DNO_EXECUTE_PERMISSION $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
 
 # To build the collector with threads support, add to the above:
 # -DGC_THREADS -DPARALLEL_MARK -DTHREAD_LOCAL_ALLOC
