--- a/Makefile.direct
+++ b/Makefile.direct
@@ -47,7 +47,8 @@ CFLAGS_EXTRA=
 # We need CFLAGS_FOR_PIC because we might be building a shared library.
 CFLAGS= -O -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
   -DALL_INTERIOR_POINTERS -DENABLE_DISCLAIM -DGC_ATOMIC_UNCOLLECTABLE \
-  -DJAVA_FINALIZATION -DNO_EXECUTE_PERMISSION $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
+  -DGC_GCJ_SUPPORT -DJAVA_FINALIZATION -DNO_EXECUTE_PERMISSION \
+  $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
 
 # To build the collector with threads support, add to the above:
 # -DGC_THREADS -DPARALLEL_MARK -DTHREAD_LOCAL_ALLOC
