Turn on memory unmapping in BCC/DMC/NT/WCC makefiles and Makefile.direct
* BCC_MAKEFILE (defines): Add -D USE_MUNMAP.
* NT_MAKEFILE (CFLAGS_DEFAULT): Likewise.
* WCC_MAKEFILE [MSWIN32] (DEFS): Likewise.
* digimars.mak (DEFINES): Likewise.
* Makefile.direct (CFLAGS): Add -D USE_MMAP -D USE_MUNMAP.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -48,7 +48,7 @@ CFLAGS_EXTRA=
 CFLAGS= -O -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
   -DALL_INTERIOR_POINTERS -DENABLE_DISCLAIM -DGC_ATOMIC_UNCOLLECTABLE \
   -DGC_GCJ_SUPPORT -DJAVA_FINALIZATION -DNO_EXECUTE_PERMISSION \
-  $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
+  -DUSE_MMAP -DUSE_MUNMAP $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
 
 # To build the collector with threads support, add to the above:
 # -DGC_THREADS -DPARALLEL_MARK -DTHREAD_LOCAL_ALLOC
