Travis CI: Do not pass --quiet to cppcheck (fix of commit e3d3b3bec)
In case of cppcheck quiet mode, grep (in the pipe) exits with an error.

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ matrix:
     - MAKEFILE_TARGETS="dist"
   - os: linux
     env:
-    - CPPCHECK_ENABLE="--enable=unusedFunction --quiet -I libatomic_ops/src extra/gc.c tests/*.c"
+    - CPPCHECK_ENABLE="--enable=unusedFunction -I libatomic_ops/src extra/gc.c tests/*.c"
   - os: linux
     env:
     - CPPCHECK_ENABLE="--enable=unusedFunction --force -D GC_BUILTIN_ATOMIC *.cc cord/*.c cord/tests/*.c tests/*.c tests/*.cc"
