--- a/.travis.yml
+++ b/.travis.yml
@@ -229,6 +229,9 @@ matrix:
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: osx
     env:
+    - CONF_OPTIONS="--enable-cplusplus --disable-shared --enable-static"
+  - os: osx
+    env:
     - CONF_OPTIONS="--enable-large-config --enable-cplusplus --disable-handle-fork"
     - NO_CLONE_LIBATOMIC_OPS=true
   - os: linux
