--- a/cord/cord.am
+++ b/cord/cord.am
@@ -19,7 +19,13 @@ libcord_la_SOURCES = \
 TESTS += cordtest$(EXEEXT)
 check_PROGRAMS += cordtest
 cordtest_SOURCES = cord/tests/cordtest.c
-cordtest_LDADD = $(top_builddir)/libgc.la $(top_builddir)/libcord.la
+cordtest_LDADD = $(top_builddir)/libcord.la
+
+## In case of static libraries build, libgc.a is already referenced in
+## dependency_libs attribute of libcord.la file.
+if ENABLE_SHARED
+cordtest_LDADD += $(top_builddir)/libgc.la
+endif
 
 EXTRA_DIST += \
         cord/tests/de.c \
