Remove unused sparc_sunos4_mach_dep.s file
Issue #269 (bdwgc).

It had been used only by OpenBSD/sparc in Makefile.direct previously.

* Makefile.am (EXTRA_libgc_la_SOURCES): Remove sparc_sunos4_mach_dep.s.
* Makefile.direct (SRCS): Likewise.
* sparc_sunos4_mach_dep.s: Remove file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -127,7 +127,7 @@ libgc_la_LDFLAGS = $(extra_ldflags_libgc) -version-info $(LIBGC_VER_INFO) \
     -no-undefined
 
 EXTRA_libgc_la_SOURCES = ia64_save_regs_in_stack.s sparc_mach_dep.S \
-    sparc_netbsd_mach_dep.s sparc_sunos4_mach_dep.s
+    sparc_netbsd_mach_dep.s
 
 if CPLUSPLUS
 # C++ Interface
