Rename NO values to OFF in CMake script (code refactoring)
This is to better distinguish them from ON values.

* CMakeLists.txt (enable_threads, enable_gc_debug,
enable_redirect_malloc, enable_mmap, enable_large_config,
enable_gc_assertions, enable_checksums): Change NO to OFF.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ set(SRC alloc.c reclaim.c allchblk.c misc.c mach_dep.c os_dep.c
         mallocx.c)
 set(LIBS)
 
-option(enable_threads "TODO" NO)
+option(enable_threads "TODO" OFF)
 if (enable_threads)
   find_package(Threads REQUIRED)
   message("Thread Model: ${CMAKE_THREAD_LIBS_INIT}" )
@@ -169,7 +169,7 @@ if (enable_atomic_uncollectable)
   add_definitions("-DGC_ATOMIC_UNCOLLECTABLE")
 endif()
 
-option(enable_gc_debug "Support for pointer back-tracing" NO)
+option(enable_gc_debug "Support for pointer back-tracing" OFF)
 if (enable_gc_debug)
   add_definitions("-DDBG_HDRS_ALL -DKEEP_BACK_PTRS")
   if (HOST MATCHES ia64-.*-linux.*|i586-.*-linux.*|i686-.*-linux.*|x86-.*-linux.*|x86_64-.*-linux.*)
@@ -183,7 +183,7 @@ if (enable_gc_debug)
   endif()
 endif(enable_gc_debug)
 
-option(enable_redirect_malloc "Redirect malloc and friends to GC routines" NO)
+option(enable_redirect_malloc "Redirect malloc and friends to GC routines" OFF)
 if (enable_redirect_malloc)
   if (enable_gc_debug)
     add_definitions("-DREDIRECT_MALLOC=GC_debug_malloc_replacement")
@@ -195,7 +195,7 @@ if (enable_redirect_malloc)
   add_definitions("-DGC_USE_DLOPEN_WRAP")
 endif(enable_redirect_malloc)
 
-option(enable_mmap "Use mmap instead of sbrk to expand the heap" NO)
+option(enable_mmap "Use mmap instead of sbrk to expand the heap" OFF)
 
 option(enable_munmap "Return page to the OS if empty for N collections" ON)
 if (enable_munmap)
@@ -214,12 +214,12 @@ if (NOT enable_register_main_static_data)
   add_definitions("-DGC_DONT_REGISTER_MAIN_STATIC_DATA")
 endif()
 
-option(enable_large_config "Optimize for large heap or root set" NO)
+option(enable_large_config "Optimize for large heap or root set" OFF)
 if (enable_large_config)
   add_definitions("-DLARGE_CONFIG")
 endif()
 
-option(enable_gc_assertions "Enable collector-internal assertion checking" NO)
+option(enable_gc_assertions "Enable collector-internal assertion checking" OFF)
 if (enable_gc_assertions)
   add_definitions("-DGC_ASSERTIONS")
 endif()
@@ -229,7 +229,7 @@ if (NOT enable_threads_discovery)
   add_definitions("-DGC_NO_THREADS_DISCOVERY")
 endif()
 
-option(enable_checksums "Report erroneously cleared dirty bits" NO)
+option(enable_checksums "Report erroneously cleared dirty bits" OFF)
 if (enable_checksums)
   if (enable_munmap OR enable_threads)
     message("CHECKSUMS not compatible with USE_MUNMAP or threads")
